background img fixed

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body {
 -------------------------------------*/
 #section1 {
   height: 100vh;
-  background-image: url(/img/sirop-soc-top.jpeg);
+  background-image: url(../img/sirop-soc-top.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
