--- a/css/main.scss
+++ b/css/main.scss
@@ -27,7 +27,7 @@ html {
 -------------------------------------*/
 #section1{
    height: 100vh;
-   background-image: url(/img/sirop-soc-top.jpeg);
+   background-image: url(../img/sirop-soc-top.jpeg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
