--- a/css/main.scss
+++ b/css/main.scss
@@ -9,151 +9,152 @@
 
 /*  ----- PAGE DESIGN PART ----- */
 html {
-   box-sizing: border-box; /* Total width will include paddings and borders */
-   font-size: 62.5%; /* defining 1rem = 10px */
- }
- 
- body {
-   font-size: 1.6rem;
-   font-family: 'Roboto Slab', serif;
-   position: relative;
- }
+  box-sizing: border-box; /* Total width will include paddings and borders */
+  font-size: 62.5%; /* defining 1rem = 10px */
+}
 
+body {
+  font-size: 1.6rem;
+  font-family: "Roboto Slab", serif;
+  position: relative;
+}
 
 /*-------------------------------------
 ---------------------------------------
 ----- SECTION 1 - Header + Navbar -----
 ---------------------------------------
 -------------------------------------*/
-#section1{
-   height: 100vh;
-   background-image: url(../img/sirop-soc-top.jpeg);
-   background-size: cover;
-   background-position: center;
-   background-repeat: no-repeat;
-   margin-bottom: 0;
-   position: relative;
-   
-   nav{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 2.5rem 5rem;
+#section1 {
+  height: 100vh;
+  background-image: url(../img/sirop-soc-top.jpeg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-bottom: 0;
+  position: relative;
 
-      .nav-btn{
-         color: rgb(70, 70, 70);
-         text-decoration: none;   
-      
-         &:hover{
-            transform: scale(1.4);
-         }
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2.5rem 5rem;
+
+    .nav-btn {
+      a {
+        color: #fff;
+        text-decoration: none;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        transition: all 0.3s ease;
       }
 
-   }
-
-   .center-title{
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform:translate(-50%, -50%);
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      text-align: center;
-
-      span{
-         font-size: 2rem;
-         font-weight: 700;
-         padding: 3px 8px;
-         margin: 1rem 3px;
-         background-color: #fff;
-         color:#476e9a;
-         display: inline-block;
-
-         &:hover{
-            transform: translateY(-1rem) scale(1.2);
-            transition: all ease .3s;
-         }
+      &:hover {
+        transform: scale(1.05);
       }
+    }
+  }
 
-      h1{
-         font-family: 'Roboto Slab';
-         font-size: 2.5rem;
-         color: #476e9a;
-         letter-spacing: 1.7rem;
-         margin: 1rem 0;
-         padding: 0;
-         font-weight: 300;
+  .center-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
 
-         &:hover{
-            transform: translateY(-2px);
-            transition: all ease .3s; 
-         }
-      }
+    span {
+      font-size: 2rem;
+      font-weight: 700;
+      padding: 3px 8px;
+      margin: 1rem 3px;
+      background-color: #fff;
+      color: #476e9a;
+      display: inline-block;
 
-   }
-
-   .social-btn{
-      position: absolute;
-      left: 50%;
-      bottom: 8rem;
-      transform:translateX(-50%);
-      text-align: center;
-
-      div{
-         display: flex;
-         align-items: center;
-
-         a{
-            width: 3rem;
-            height: 3rem;
-            border-radius: 50%;
-            background-color: #d3d7e1;
-            box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-            margin: 0 1rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            &:hover{
-               background-color: rgb(60, 60, 60);
-               transform: scale(1.3);
-               transition: all ease 1s;
-
-               i{
-                  color: #ebe9e9;
-               }
-            }
-
-            &:active{
-               transform: scale(1);
-            }
-
-            i{
-               color: rgb(60, 60, 60);;
-               font-size: 12px;
-            }
-         }
-      }
-   }
-
-   .arrow{
-      position: absolute;
-      left: 50%;
-      bottom: 2rem;
-      transform:translateX(-50%);
-      text-align: center;
-      color: #fff;
-      font-size: 3rem;
-      animation: arrow-move 2s infinite;
-   }
-
-   @keyframes arrow-move {
-      50% {
-        transform: translateY(2rem);
+      &:hover {
+        transform: translateY(-1rem) scale(1.2);
+        transition: all ease 0.3s;
       }
     }
 
+    h1 {
+      font-family: "Roboto Slab";
+      font-size: 2.5rem;
+      color: #476e9a;
+      letter-spacing: 1.7rem;
+      margin: 1rem 0;
+      padding: 0;
+      font-weight: 300;
+
+      &:hover {
+        transform: translateY(-2px);
+        transition: all ease 0.3s;
+      }
+    }
+  }
+
+  .social-btn {
+    position: absolute;
+    left: 50%;
+    bottom: 8rem;
+    transform: translateX(-50%);
+    text-align: center;
+
+    div {
+      display: flex;
+      align-items: center;
+
+      a {
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
+        background-color: #d3d7e1;
+        box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+        margin: 0 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+          background-color: rgb(60, 60, 60);
+          transform: scale(1.3);
+          transition: all ease 1s;
+
+          i {
+            color: #ebe9e9;
+          }
+        }
+
+        &:active {
+          transform: scale(1);
+        }
+
+        i {
+          color: rgb(60, 60, 60);
+          font-size: 12px;
+        }
+      }
+    }
+  }
+
+  .arrow {
+    position: absolute;
+    left: 50%;
+    bottom: 3rem;
+    transform: translateX(-50%);
+    text-align: center;
+    color: #fff;
+    font-size: 3rem;
+    animation: arrow-move 2s infinite;
+  }
+
+  @keyframes arrow-move {
+    50% {
+      transform: translate(-50%, 2rem);
+    }
+  }
 }
 
 /*-------------------------------------
@@ -161,68 +162,85 @@ html {
 ------- SECTION 2 - DESPRE NOI -------
 ---------------------------------------
 -------------------------------------*/
-#section2{
-   background-color: #000;
-   position: relative;
-   margin-top: 0;
-   clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%);
+#section2 {
+  background-color: #000;
+  position: relative;
+  margin-top: 0;
+  clip-path: polygon(0 0, 100% 0, 100% 97%, 0% 100%);
 
-   #about-us {
+  @media only screen and (min-width: 1112px) {
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+  }
+
+  section {
+    @media only screen and (min-width: 1600px) {
+      width: 160rem;
+      margin: auto;
+    }
+  }
+
+  #about-us {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      font-size: 2.8rem;
+      letter-spacing: 2px;
+      color: #fff;
+      text-align: center;
+      margin-top: 5rem;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      color: #c7c7c7;
+      font-family: "Roboto";
+      font-size: 1.4rem;
+      font-weight: 300;
+      letter-spacing: 1px;
+      text-align: center;
+      width: 90%;
+      margin-bottom: 3rem;
+    }
+  }
+
+  .about-us-cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 1rem;
+    padding-bottom: 5rem;
+
+    @media only screen and (min-width: 600px) {
+      grid-template-columns: 1fr 1fr;
+    }
+
+    @media only screen and (min-width: 1112px) {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+    div {
+      background-color: rgba(255, 255, 255, 0.2);
+      color: #fff;
+      margin: 2rem;
+      padding: 4rem;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      border-radius: 0.5rem;
 
-      h1{
-         font-size: 2.8rem;
-         letter-spacing: 2px;
-         color: #fff;
-         text-align: center;
-         margin-top: 5rem;
-         margin-bottom: 1rem;
+      h3 {
+        margin-bottom: 2rem;
       }
 
-      p{
-         color: #c7c7c7;
-         font-family: 'Roboto';
-         font-size: 1.4rem;
-         font-weight: 300;
-         letter-spacing: 1px;
-         text-align: center;
-         width: 90%;
-         margin-bottom: 3rem;
+      p {
+        font-size: 1.4rem;
+        font-weight: 300;
+        text-align: center;
       }
-
-   }
-
-   .about-us-cards{
-      display: grid;
-      grid-template-columns: 1fr;
-      padding: 1rem;
-      padding-bottom: 13rem;
-
-      div{
-         background-color: rgba(255, 255, 255, 0.2);
-         color: #fff;
-         margin: 2rem;
-         padding: 4rem;
-         display: flex;
-         flex-direction: column;
-         align-items: center;
-         border-radius: .5rem;
-
-         h3{
-            margin-bottom: 2rem;
-         }
-
-         p{
-            font-size: 1.4rem;
-            font-weight: 300;
-            text-align: center;
-         }
-      }
-   }
-
+    }
+  }
 }
 
 /*-------------------------------------
@@ -230,74 +248,159 @@ html {
 ------- SECTION 3 - PRODUSE -------
 ---------------------------------------
 -------------------------------------*/
-#section3{
-   h1{
-      font-size: 2.8rem;
-      font-weight: 800;
-      letter-spacing: 1px;
-      text-align: center;
-      margin: 5rem 0;
-   }
+#section3 {
+  h1 {
+    font-size: 2.8rem;
+    font-weight: 800;
+    letter-spacing: 1px;
+    text-align: center;
+    margin: 5rem 0;
+  }
 
-   .products{
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
+  .products {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 
-      .products-card{
-         position: relative;
-         width: 40rem;
-         margin: 1rem;
-         border-radius: .5rem;
-         box-shadow: 1px 1px 2px rgb(60, 60, 60);
-         overflow: hidden;
+    .products-card {
+      position: relative;
+      width: 40rem;
+      margin: 1rem;
+      border-radius: 0.5rem;
+      box-shadow: 1px 1px 2px rgb(60, 60, 60);
+      overflow: hidden;
 
-         .products-img{
-            display: block;
-            width: 100%;
-            height: auto;
-         }
-          
-         .overlay{
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background-color: rgba(60, 60, 60, 0.4);
-            overflow: hidden;
-            width: 100%;
-            height: 0;
-            transition: .5s ease;
-
-            .text{
-               color: white;
-               font-size: 20px;
-               position: absolute;
-               top: 50%;
-               left: 50%;
-               -webkit-transform: translate(-50%, -50%);
-               -ms-transform: translate(-50%, -50%);
-               transform: translate(-50%, -50%);
-               white-space: nowrap;
-            }
-         }
-
-         &:hover .overlay{
-            height: 100%;
-         }
-
-         &:hover{
-            animation: shadowmove 3s infinite;
-         }
-       }
-
-   }
-
-   @keyframes shadowmove {
-      50% {
-         box-shadow: 7px 7px 10px rgb(60, 60, 60);
+      .products-img {
+        display: block;
+        width: 100%;
+        height: auto;
       }
-   }
+
+      .overlay {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(60, 60, 60, 0.4);
+        overflow: hidden;
+        width: 100%;
+        height: 0;
+        transition: 0.5s ease;
+
+        .text {
+          color: white;
+          font-size: 20px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+          white-space: nowrap;
+        }
+      }
+
+      &:hover .overlay {
+        height: 100%;
+      }
+
+      &:hover {
+        animation: shadowmove 3s infinite;
+      }
+    }
+  }
+
+  @keyframes shadowmove {
+    50% {
+      box-shadow: 7px 7px 10px rgb(60, 60, 60);
+    }
+  }
+}
+
+/*-------------------------------------
+---------------------------------------
+------- SECTION 4 - CUM COMAND -------
+---------------------------------------
+-------------------------------------*/
+#section4 {
+  background-image: url("/img/nature.jpg");
+  height: 115rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+  clip-path: polygon(0 3%, 100% 0, 100% 100%, 0% 100%);
+
+  @media only screen and (min-width: 600px) {
+    height: 70rem;
+  }
+
+  @media only screen and (min-width: 1112px) {
+    height: 50rem;
+    clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
+  }
+
+  .container-hto {
+    width: 80%;
+    background-color: rgba(210, 180, 140, 0.95);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    @media only screen and (min-width: 1600px) {
+      width: 150rem;
+    }
+
+    h2 {
+      font-size: 2.8rem;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      color: #fff;
+      text-align: center;
+      margin-top: 2rem;
+      margin-bottom: 3rem;
+    }
+
+    .how-to-order {
+      display: grid;
+      grid-template-columns: 1fr;
+
+      @media only screen and (min-width: 600px) {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      @media only screen and (min-width: 1112px) {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+      }
+    }
+
+    .hto-steps {
+      color: #fff;
+      font-weight: 300;
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 5px;
+      margin: 1rem;
+
+      i {
+        font-size: 4.5rem;
+        margin-top: 2rem;
+      }
+
+      h3 {
+        margin: 2rem;
+      }
+
+      p {
+        margin: auto;
+        margin-bottom: 2rem;
+        padding: 0 2rem;
+      }
+    }
+  }
 }
