--- a/css/main.css
+++ b/css/main.css
@@ -418,7 +418,7 @@ body {
 ---------------------------------------
 -------------------------------------*/
 #section4 {
-  background-image: url("/img/nature.jpg");
+  background-image: url("../img/nature.jpg");
   height: 115rem;
   background-position: center;
   background-repeat: no-repeat;
