--- a/css/main.css
+++ b/css/main.css
@@ -524,4 +524,57 @@ body {
   margin-bottom: 2rem;
   padding: 0 2rem;
 }
+
+/*-------------------------------------
+---------------------------------------
+--------- SECTION 5 - CONTACT ---------
+---------------------------------------
+-------------------------------------*/
+#section5 .container-contact {
+  width: 80%;
+  margin: 5rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#section5 h2 {
+  font-size: 2.8rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
+}
+
+#section5 p {
+  margin: 0.5rem 0;
+  font-size: 1.7rem;
+  text-align: center;
+  line-height: 4.5rem;
+  color: rgba(60, 60, 60, 0.4);
+}
+
+#section5 p span {
+  color: tan;
+}
+
+#section5 p .span-small {
+  font-size: 2.3rem;
+  font-weight: 300;
+}
+
+#section5 p .span-big {
+  font-size: 2.8rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
 /*# sourceMappingURL=main.css.map */
