--- a/css/main.css
+++ b/css/main.css
@@ -54,15 +54,17 @@ body {
 #section1 nav .nav-btn a {
   color: #fff;
   text-decoration: none;
-  letter-spacing: 1px;
   text-transform: uppercase;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  letter-spacing: 1px;
+  -webkit-transition: 1s all ease-in-out;
+  transition: 1s all ease-in-out;
 }
 
 #section1 nav .nav-btn:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
+  padding-bottom: 0.2rem;
+  border-bottom: 1px solid #476e9a;
 }
 
 #section1 .center-title {
@@ -370,7 +372,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(60, 60, 60, 0.4);
+  background-color: rgba(60, 60, 60, 0.6);
   overflow: hidden;
   width: 100%;
   height: 0;
@@ -386,7 +388,34 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  white-space: nowrap;
+  width: 35rem;
+  text-align: center;
+}
+
+#section3 .products .products-card .overlay .text h2 {
+  margin-bottom: 1rem;
+  font-weight: 200;
+  text-transform: uppercase;
+}
+
+#section3 .products .products-card .overlay .text p {
+  font-size: 1.5rem;
+  font-weight: 300;
+  padding: 1rem 0;
+}
+
+#section3 .products .products-card .overlay .text a {
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.4rem;
+  padding: 0.3rem 1.5rem;
+  margin-top: 1rem;
+  border: 1px solid tan;
+  border-radius: 1rem;
+}
+
+#section3 .products .products-card .overlay .text a:hover {
+  background-color: rgba(210, 180, 140, 0.5);
 }
 
 #section3 .products .products-card:hover .overlay {
@@ -396,6 +425,70 @@ body {
 #section3 .products .products-card:hover {
   -webkit-animation: shadowmove 3s infinite;
           animation: shadowmove 3s infinite;
+}
+
+#section3 .products .products-card .close-modal-product {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: gray;
+  opacity: 0.8;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+#section3 .products .products-card .hidden {
+  display: none;
+}
+
+#section3 .products .products-card .modal-product {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 70%;
+  max-height: 80%;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 6rem;
+  border-radius: 1rem;
+  z-index: 18;
+  color: gray;
+  overflow: scroll;
+}
+
+@media only screen and (max-width: 992px) {
+  #section3 .products .products-card .modal-product {
+    width: 95%;
+    padding: 4rem;
+    font-size: 1.4rem;
+    letter-spacing: normal;
+  }
+}
+
+#section3 .products .products-card .modal-product h3 {
+  margin-bottom: 1rem;
+}
+
+#section3 .products .products-card .modal-product p {
+  font-weight: 300;
+  text-align: justify;
+  letter-spacing: 1px;
+  margin: 1rem 0;
+}
+
+#section3 .products .products-card .overlay-modal-product {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(128, 128, 128, 0.6);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  z-index: 17;
 }
 
 @-webkit-keyframes shadowmove {
@@ -545,7 +638,7 @@ body {
           align-items: center;
 }
 
-#section5 h2 {
+#section5 .container-contact h2 {
   font-size: 2.8rem;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -554,7 +647,7 @@ body {
   margin-bottom: 3rem;
 }
 
-#section5 p {
+#section5 .container-contact p {
   margin: 0.5rem 0;
   font-size: 1.7rem;
   text-align: center;
@@ -562,19 +655,116 @@ body {
   color: rgba(60, 60, 60, 0.4);
 }
 
-#section5 p span {
+#section5 .container-contact p span {
   color: tan;
 }
 
-#section5 p .span-small {
+#section5 .container-contact p .span-small {
   font-size: 2.3rem;
   font-weight: 300;
 }
 
-#section5 p .span-big {
+#section5 .container-contact p .span-big {
   font-size: 2.8rem;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.5px;
+}
+
+#section5 .container-contact a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #fff;
+  background-color: tan;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid tan;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s all ease;
+}
+
+#section5 .container-contact a:hover {
+  color: tan;
+  background-color: #fff;
+}
+
+#section5 .container-contact a:active {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+}
+
+#section5 .container-contact .close-modal-form {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: gray;
+  opacity: 0.8;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+#section5 .container-contact .hidden {
+  display: none;
+}
+
+#section5 .container-contact .modal-form {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 70%;
+  max-height: 80%;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 6rem;
+  border-radius: 1rem;
+  z-index: 18;
+  color: gray;
+  overflow: scroll;
+}
+
+@media only screen and (max-width: 992px) {
+  #section5 .container-contact .modal-form {
+    width: 95%;
+    padding: 4rem;
+    font-size: 1.4rem;
+    letter-spacing: normal;
+  }
+}
+
+#section5 .container-contact .modal-form p {
+  font-weight: 300;
+  text-align: justify;
+  letter-spacing: 1px;
+  margin: 0.5rem 0;
+}
+
+#section5 .container-contact .overlay-modal-form {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(128, 128, 128, 0.6);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  z-index: 17;
+}
+
+/*-------------------------------------
+---------------- FOOTER ---------------
+---------------------------------------
+-------------------------------------*/
+footer {
+  text-align: center;
+  padding: 2rem;
+  background-color: #000;
+}
+
+footer p {
+  color: #fff;
+  font-size: 1.2rem;
 }
 /*# sourceMappingURL=main.css.map */
