--- a/css/main.css
+++ b/css/main.css
@@ -741,6 +741,36 @@ body {
   margin: 0.5rem 0;
 }
 
+@media only screen and (max-width: 992px) {
+  #section5 .container-contact .modal-form p {
+    letter-spacing: normal;
+    line-height: normal;
+  }
+}
+
+#section5 .container-contact .modal-form .form-container form input,
+#section5 .container-contact .modal-form .form-container form textarea {
+  width: 50rem;
+  padding: 1rem;
+  margin: 5px 0 20px 0;
+  display: inline-block;
+  border: none;
+  background: #ddd;
+  border-radius: 0.3rem;
+}
+
+@media only screen and (max-width: 992px) {
+  #section5 .container-contact .modal-form .form-container form input,
+  #section5 .container-contact .modal-form .form-container form textarea {
+    width: 100%;
+  }
+}
+
+#section5 .container-contact .modal-form .form-container form textarea {
+  max-width: 100%;
+  height: 10rem;
+}
+
 #section5 .container-contact .overlay-modal-form {
   position: fixed;
   top: 0;
